@@ -14,19 +14,26 @@ import com.powsybl.iidm.network.IdentifiableType;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.network.store.client.NetworkStoreService;
 import com.powsybl.network.store.client.PreloadingStrategy;
-import org.gridsuite.modification.NetworkModificationException;
 import org.gridsuite.modification.dto.CompositeModificationInfos;
 import org.gridsuite.modification.dto.EquipmentAttributeModificationInfos;
 import org.gridsuite.modification.dto.ModificationInfos;
+import org.gridsuite.modification.dto.ModificationReferenceInfos;
+import org.gridsuite.modification.server.dto.ActionType;
+import org.gridsuite.modification.server.dto.CompositeInfos;
 import org.gridsuite.modification.server.dto.NetworkModificationResult;
 import org.gridsuite.modification.server.dto.NetworkModificationsResult;
 import org.gridsuite.modification.server.entities.CompositeModificationEntity;
+import org.gridsuite.modification.server.entities.ModificationContainerType;
 import org.gridsuite.modification.server.entities.ModificationEntity;
+import org.gridsuite.modification.server.error.ModificationBusinessErrorCode;
+import org.gridsuite.modification.server.error.NetworkModificationServerException;
 import org.gridsuite.modification.server.repositories.CompositeModificationRepository;
+import org.gridsuite.modification.server.repositories.ModificationRepository;
 import org.gridsuite.modification.server.repositories.NetworkModificationRepository;
 import org.gridsuite.modification.server.service.ReportService;
 import org.gridsuite.modification.server.utils.NetworkCreation;
 import org.gridsuite.modification.server.utils.TestUtils;
+import org.gridsuite.modification.server.utils.elasticsearch.DisableElasticsearch;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -43,12 +50,13 @@ import org.springframework.test.web.servlet.MvcResult;
 import java.util.*;
 
 import static org.gridsuite.modification.ModificationType.COMPOSITE_MODIFICATION;
+import static org.gridsuite.modification.server.modifications.AbstractNetworkModificationTest.URI_NETWORK_MODIF_GET_PUT;
 import static org.gridsuite.modification.server.utils.NetworkCreation.VARIANT_ID;
 import static org.gridsuite.modification.server.utils.TestUtils.runRequestAsync;
 import static org.gridsuite.modification.server.utils.assertions.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.nullable;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -58,6 +66,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
  */
 @AutoConfigureMockMvc
 @SpringBootTest
+@DisableElasticsearch
 class CompositeControllerTest {
     private static final UUID TEST_NETWORK_ID = UUID.fromString("7928181c-7977-4592-ba19-88027e4254e4");
     private static final UUID TEST_GROUP_ID = UUID.randomUUID();
@@ -72,7 +81,10 @@ class CompositeControllerTest {
     private ObjectWriter objectWriter;
 
     @Autowired
-    private NetworkModificationRepository modificationRepository;
+    private NetworkModificationRepository networkModificationRepository;
+
+    @Autowired
+    private ModificationRepository modificationRepository;
 
     @Autowired
     private CompositeModificationRepository compositeRepository;
@@ -93,13 +105,13 @@ class CompositeControllerTest {
         objectWriter = mapper.writer().withDefaultPrettyPrinter();
         network = NetworkCreation.create(TEST_NETWORK_ID, true);
         when(networkStoreService.getNetwork(eq(TEST_NETWORK_ID), nullable(PreloadingStrategy.class))).then((Answer<Network>) invocation -> network);
-        modificationRepository.deleteAll();
+        networkModificationRepository.deleteAll();
     }
 
     @AfterEach
     void tearOff() {
         // clean DB
-        modificationRepository.deleteAll();
+        networkModificationRepository.deleteAll();
     }
 
     @Test
@@ -107,21 +119,22 @@ class CompositeControllerTest {
         // Insert some switch modifications in the group
         int modificationsNumber = 2;
         List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, modificationsNumber);
-        assertEquals(modificationsNumber, modificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
+        assertEquals(modificationsNumber, networkModificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
 
         // Create a composite modification with the switch modification
         List<UUID> modificationUuids = modificationList.stream().map(ModificationInfos::getUuid).toList();
         MvcResult mvcResult;
-        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(modificationUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         ModificationInfos compositeModificationInfos = CompositeModificationInfos.builder()
                 .modificationsInfos(modificationList)
+                .name("composite name 1")
                 .build();
         UUID compositeModificationUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
-        assertThat(modificationRepository.getModificationInfo(compositeModificationUuid)).recursivelyEquals(compositeModificationInfos);
+        assertThat(networkModificationRepository.getModificationInfo(compositeModificationUuid)).recursivelyEquals(compositeModificationInfos);
 
-        List<ModificationInfos> modificationInfosList = modificationRepository.getModifications(TEST_GROUP_ID, true, true);
+        List<ModificationInfos> modificationInfosList = networkModificationRepository.getModifications(TEST_GROUP_ID, true, true);
         assertEquals(modificationsNumber, modificationInfosList.size());
 
         // get the composite modification (metadata only)
@@ -141,14 +154,16 @@ class CompositeControllerTest {
         // create another composite modification
         List<ModificationInfos> otherModificationList = createSomeSwitchModifications(TEST_GROUP2_ID, modificationsNumber);
         List<UUID> otherModificationUuids = otherModificationList.stream().map(ModificationInfos::getUuid).toList();
-        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        String compositeName = "composite name 2";
+        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", compositeName)
                         .content(mapper.writeValueAsString(otherModificationUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         ModificationInfos otherCompositeModificationInfos = CompositeModificationInfos.builder()
                 .modificationsInfos(otherModificationList)
+                .name(compositeName)
                 .build();
         UUID otherCompositeModificationUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
-        assertThat(modificationRepository.getModificationInfo(otherCompositeModificationUuid)).recursivelyEquals(otherCompositeModificationInfos);
+        assertThat(networkModificationRepository.getModificationInfo(otherCompositeModificationUuid)).recursivelyEquals(otherCompositeModificationInfos);
 
         // get both composite modifications
         mvcResult = mockMvc.perform(get(URI_GET_COMPOSITE_NETWORK_MODIF_CONTENT + "/network-modifications?uuids=" + compositeModificationUuid + "&uuids=" + otherCompositeModificationUuid))
@@ -166,8 +181,8 @@ class CompositeControllerTest {
         checkCompositeModificationContent(compositeModificationContent);
 
         // Insert the composite modification in the group
-        final String bodyJson = getJsonBodyModificationCompositeInfos(
-                List.of(Pair.of(compositeModificationUuid, "random name")));
+        final String bodyJson = getJsonBodyModificationCompositeToBeInserted(
+                List.of(new CompositeInfos(compositeModificationUuid, "random name", false, "description")));
         mvcResult = runRequestAsync(
                 mockMvc,
                 put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/" + TEST_GROUP_ID + "?action=SPLIT")
@@ -177,7 +192,7 @@ class CompositeControllerTest {
 
         assertApplicationStatusOK(mvcResult);
 
-        List<ModificationInfos> newModificationList = modificationRepository.getModifications(TEST_GROUP_ID, false, true);
+        List<ModificationInfos> newModificationList = networkModificationRepository.getModifications(TEST_GROUP_ID, false, true);
         assertEquals(modificationsNumber * 2, newModificationList.size());
         List<UUID> newModificationUuidList = newModificationList.stream().map(ModificationInfos::getUuid).toList();
         assertEquals(modificationUuids.getFirst(), newModificationUuidList.getFirst());
@@ -193,17 +208,17 @@ class CompositeControllerTest {
         // Create a composite modification with the switch modification
         List<UUID> modificationUuids = modificationList.stream().map(ModificationInfos::getUuid).toList();
         MvcResult mvcResult;
-        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(modificationUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID compositeModificationUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
-        List<ModificationInfos> modificationInfosList = modificationRepository.getModifications(TEST_GROUP_ID, true, true);
+        List<ModificationInfos> modificationInfosList = networkModificationRepository.getModifications(TEST_GROUP_ID, true, true);
         assertEquals(modificationsNumber, modificationInfosList.size());
 
         // Insert the composite modification in the group
-        final String bodyJson = getJsonBodyModificationCompositeInfos(
-                List.of(Pair.of(compositeModificationUuid, "random name")));
+        final String bodyJson = getJsonBodyModificationCompositeToBeInserted(
+                List.of(new CompositeInfos(compositeModificationUuid, "random name", false, "description")));
 
         // insert the same composite modification inside as a complete composite, not split into regular network modifications
         mvcResult = runRequestAsync(
@@ -212,12 +227,52 @@ class CompositeControllerTest {
                         .content(bodyJson).contentType(MediaType.APPLICATION_JSON), status().isOk()
         );
         assertApplicationStatusOK(mvcResult);
-        List<ModificationInfos> newModificationList = modificationRepository.getModifications(TEST_GROUP_ID, false, true);
+        List<ModificationInfos> newModificationList = networkModificationRepository.getModifications(TEST_GROUP_ID, false, true);
         assertEquals(modificationsNumber + 1, newModificationList.size());
         CompositeModificationInfos insertedComposite = (CompositeModificationInfos) newModificationList.stream().filter(modificationInfos ->
                 modificationInfos.getType().equals(COMPOSITE_MODIFICATION)).findFirst().orElseThrow();
         assertNotNull(insertedComposite);
         checkCompositeModificationContent(insertedComposite.getModificationsInfos());
+    }
+
+    @Test
+    void testInsertSharedComposite() throws Exception {
+        int modificationsNumber = 2;
+        List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, modificationsNumber);
+
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name")
+                        .content(mapper.writeValueAsString(modificationList.stream().map(ModificationInfos::getUuid).toList()))
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andReturn();
+        UUID compositeModificationUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
+
+        String bodyJson = getJsonBodyModificationCompositeToBeInserted(
+                List.of(new CompositeInfos(compositeModificationUuid, "shared composite", true, "description")));
+
+        runRequestAsync(
+                mockMvc,
+                put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/" + TEST_GROUP_ID + "?action=INSERT")
+                        .content(bodyJson)
+                        .contentType(MediaType.APPLICATION_JSON),
+                status().isOk());
+
+        List<ModificationInfos> newModificationList = networkModificationRepository.getModifications(TEST_GROUP_ID, false, true);
+        assertEquals(modificationsNumber + 1, newModificationList.size());
+
+        ModificationReferenceInfos insertedReference = assertInstanceOf(
+                ModificationReferenceInfos.class,
+                newModificationList.getLast()
+        );
+        assertEquals(compositeModificationUuid, insertedReference.getReferenceId());
+        assertEquals(ModificationReferenceInfos.Type.BASIC, insertedReference.getReferenceType());
+
+        CompositeModificationInfos referencedComposite = assertInstanceOf(
+                CompositeModificationInfos.class,
+                insertedReference.getReferenceInfos()
+        );
+        assertEquals(compositeModificationUuid, referencedComposite.getUuid());
+        checkCompositeModificationContent(referencedComposite.getModificationsInfos());
     }
 
     private static void checkCompositeModificationContent(List<ModificationInfos> compositeModificationContent) {
@@ -241,12 +296,12 @@ class CompositeControllerTest {
             mvcResult = runRequestAsync(mockMvc, post(URI_NETWORK_MODIF_BASE + "?groupUuid=" + groupId).content(bodyJson).contentType(MediaType.APPLICATION_JSON), status().isOk());
             assertApplicationStatusOK(mvcResult);
         }
-        var modificationList = modificationRepository.getModifications(groupId, false, true);
+        var modificationList = networkModificationRepository.getModifications(groupId, false, true);
         assertEquals(number, modificationList.size());
         return modificationList;
     }
 
-    private String getJsonBodyModificationCompositeInfos(List<Pair<UUID, String>> modifs) throws JsonProcessingException {
+    private String getJsonBodyModificationCompositeToBeInserted(List<CompositeInfos> modifs) throws JsonProcessingException {
         return TestUtils.getJsonBodyModificationCompositeInfos(modifs, TEST_NETWORK_ID, VARIANT_ID);
     }
 
@@ -263,7 +318,7 @@ class CompositeControllerTest {
         List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, 1);
         List<UUID> modificationUuidList = modificationList.stream().map(ModificationInfos::getUuid).toList();
         MvcResult mvcResult;
-        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(modificationUuidList)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID compositeModificationUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
@@ -285,12 +340,12 @@ class CompositeControllerTest {
         assertNotEquals(returnedSourceId, returnedNewId);
         assertEquals(compositeModificationUuid, returnedSourceId);
 
-        ModificationInfos sourceModificationInfos = modificationRepository.getModificationInfo(compositeModificationUuid);
-        ModificationInfos newModificationInfos = modificationRepository.getModificationInfo(returnedNewId);
+        ModificationInfos sourceModificationInfos = networkModificationRepository.getModificationInfo(compositeModificationUuid);
+        ModificationInfos newModificationInfos = networkModificationRepository.getModificationInfo(returnedNewId);
         // compare duplicate with the source (same data except uuid)
         assertThat(sourceModificationInfos).recursivelyEquals(newModificationInfos);
         // source group has not changed
-        List<ModificationInfos> groupModifications = modificationRepository.getModifications(TEST_GROUP_ID, true, true, false);
+        List<ModificationInfos> groupModifications = networkModificationRepository.getModifications(TEST_GROUP_ID, true, true, false);
         assertEquals(1, groupModifications.size());
         assertEquals(modificationUuidList.getFirst(), groupModifications.getFirst().getUuid());
 
@@ -300,12 +355,48 @@ class CompositeControllerTest {
                 .andExpect(status().isOk());
 
         // source group has not changed
-        groupModifications = modificationRepository.getModifications(TEST_GROUP_ID, true, true, false);
+        groupModifications = networkModificationRepository.getModifications(TEST_GROUP_ID, true, true, false);
         assertEquals(1, groupModifications.size());
         assertEquals(modificationUuidList.getFirst(), groupModifications.getFirst().getUuid());
         // duplicate has been deleted
-        assertEquals("MODIFICATION_NOT_FOUND : " + returnedNewId, assertThrows(NetworkModificationException.class, ()
-                -> modificationRepository.getModificationInfo(returnedNewId)).getMessage());
+        assertEquals(ModificationBusinessErrorCode.MODIFICATION_NOT_FOUND, assertThrows(NetworkModificationServerException.class, ()
+            -> networkModificationRepository.getModificationInfo(returnedNewId)).getBusinessErrorCode());
+    }
+
+    @Test
+    void testUpdateNetworkCompositeModificationName() throws Exception {
+        List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, 1);
+        assertEquals(1, networkModificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
+
+        // Create a composite modification with the switch modification
+        List<UUID> modificationUuids = modificationList.stream().map(ModificationInfos::getUuid).toList();
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name")
+                        .content(mapper.writeValueAsString(modificationUuids)).contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk()).andReturn();
+        UUID compositeModificationUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
+
+        // Update the composite modification name
+        String newCompositeName = "new composite name";
+        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/" + compositeModificationUuid)
+                        .param("name", newCompositeName)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk());
+
+        // verify that the composite has not been emptied (modifications_uuids is missing so modifications have been ignored)
+        mvcResult = mockMvc.perform(get(URI_GET_COMPOSITE_NETWORK_MODIF_CONTENT + "/network-modifications?uuids={id}&onlyMetadata=false", compositeModificationUuid))
+                .andExpect(status().isOk()).andReturn();
+        Map<UUID, List<ModificationInfos>> updatedMap = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
+        List<ModificationInfos> updatedCompositeContent = updatedMap.get(compositeModificationUuid);
+        assertEquals(updatedCompositeContent.size(), modificationList.size());
+
+        // but the name has been updated
+        mvcResult = mockMvc.perform(get(URI_NETWORK_MODIF_GET_PUT + compositeModificationUuid))
+                .andExpect(status().isOk()).andReturn();
+        NetworkModificationResult networkModificationResult = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
+        assertNotEquals(NetworkModificationResult.ApplicationStatus.WITH_ERRORS, networkModificationResult.getApplicationStatus());
+        String resultAsString = mvcResult.getResponse().getContentAsString();
+        CompositeModificationInfos receivedModification = mapper.readValue(resultAsString, new TypeReference<>() { });
+        assertEquals(newCompositeName, receivedModification.getName());
     }
 
     @Test
@@ -313,11 +404,11 @@ class CompositeControllerTest {
         // Insert some switch modifications in the group
         int modificationsNumber = 3;
         List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, modificationsNumber);
-        assertEquals(modificationsNumber, modificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
+        assertEquals(modificationsNumber, networkModificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
 
         // Create a composite modification with the switch modifications
         List<UUID> modificationUuids = modificationList.stream().map(ModificationInfos::getUuid).toList();
-        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(modificationUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID compositeModificationUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
@@ -327,10 +418,19 @@ class CompositeControllerTest {
         List<ModificationInfos> newModificationList = createSomeSwitchModifications(TEST_GROUP2_ID, newModificationsNumber);
         List<UUID> newModificationUuids = newModificationList.stream().map(ModificationInfos::getUuid).toList();
 
+        mvcResult = mockMvc.perform(get(URI_GET_COMPOSITE_NETWORK_MODIF_CONTENT + "/network-modifications?uuids={id}&onlyMetadata=false", compositeModificationUuid))
+                .andExpect(status().isOk()).andReturn();
+        Map<UUID, List<ModificationInfos>> compositeContentMap = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
+        List<UUID> baseCompositeContent = compositeContentMap.get(compositeModificationUuid).stream().map(ModificationInfos::getUuid).toList();
+
         // Update the composite modification with the new modifications
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/" + compositeModificationUuid)
+        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/" + compositeModificationUuid + "/replace")
+                        .param("name", "new name")
                         .content(mapper.writeValueAsString(newModificationUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk());
+
+        // Check the previously held modifications were deleted
+        assertEquals(0, modificationRepository.findAllByIdIn(baseCompositeContent).size());
 
         // Get the composite modification content and verify it has been updated
         mvcResult = mockMvc.perform(get(URI_GET_COMPOSITE_NETWORK_MODIF_CONTENT + "/network-modifications?uuids={id}&onlyMetadata=false", compositeModificationUuid))
@@ -347,7 +447,8 @@ class CompositeControllerTest {
         UUID nonExistentUuid = UUID.randomUUID();
         List<UUID> modificationUuids = List.of(UUID.randomUUID());
 
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/" + nonExistentUuid)
+        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/" + nonExistentUuid + "/replace")
+                        .param("name", "new name")
                         .content(mapper.writeValueAsString(modificationUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
     }
@@ -358,13 +459,14 @@ class CompositeControllerTest {
         List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, 2);
         List<UUID> modificationUuids = modificationList.stream().map(ModificationInfos::getUuid).toList();
 
-        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(modificationUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID compositeModificationUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
         // Update the composite with an empty list of modifications
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/" + compositeModificationUuid)
+        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/" + compositeModificationUuid + "/replace")
+                        .param("name", "new name")
                         .content(mapper.writeValueAsString(Collections.emptyList())).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk());
 
@@ -382,7 +484,7 @@ class CompositeControllerTest {
         // Create 3 switch modifications and a composite containing them
         List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, 3);
         List<UUID> modificationUuids = modificationList.stream().map(ModificationInfos::getUuid).toList();
-        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(modificationUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID compositeUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
@@ -397,10 +499,13 @@ class CompositeControllerTest {
 
         // Move the first sub-modification to the end (no beforeUuid = append)
         // was [0,1,2] → [1,2,0]
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}/sub-modifications/{modificationUuid}",
-                        TEST_GROUP_ID, subUuids.get(0))
-                        .queryParam("sourceCompositeUuid", compositeUuid.toString())
-                        .queryParam("targetCompositeUuid", compositeUuid.toString()))
+        mockMvc.perform(put("/v1/containers/{targetContainerId}", compositeUuid)
+                        .queryParam("action", ActionType.MOVE.name())
+                        .queryParam("sourceContainerId", compositeUuid.toString())
+                        .queryParam("sourceContainerType", ModificationContainerType.COMPOSITE.name())
+                        .queryParam("targetContainerType", ModificationContainerType.COMPOSITE.name())
+                        .content(mapper.writeValueAsString(Pair.of(List.of(subUuids.getFirst()), List.of())))
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk());
 
         Map<UUID, List<ModificationInfos>> afterFirstMove = mapper.readValue(
@@ -415,11 +520,14 @@ class CompositeControllerTest {
 
         // Move the last sub-modification before the first using beforeUuid
         // current [1,2,0] → move 0 before 1 → [0,1,2]
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}/sub-modifications/{modificationUuid}",
-                        TEST_GROUP_ID, orderAfterFirst.get(2))
-                        .queryParam("sourceCompositeUuid", compositeUuid.toString())
-                        .queryParam("targetCompositeUuid", compositeUuid.toString())
-                        .queryParam("beforeUuid", orderAfterFirst.get(0).toString()))
+        mockMvc.perform(put("/v1/containers/{targetContainerId}", compositeUuid)
+                        .queryParam("action", ActionType.MOVE.name())
+                        .queryParam("sourceContainerId", compositeUuid.toString())
+                        .queryParam("sourceContainerType", ModificationContainerType.COMPOSITE.name())
+                        .queryParam("targetContainerType", ModificationContainerType.COMPOSITE.name())
+                        .queryParam("before", orderAfterFirst.get(0).toString())
+                        .content(mapper.writeValueAsString(Pair.of(List.of(orderAfterFirst.get(2)), List.of())))
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk());
 
         Map<UUID, List<ModificationInfos>> afterSecondMove = mapper.readValue(
@@ -438,14 +546,15 @@ class CompositeControllerTest {
         // Create a composite with 2 sub-modifications and add it to the group
         List<ModificationInfos> subMods = createSomeSwitchModifications(TEST_GROUP2_ID, 2);
         List<UUID> subModUuids = subMods.stream().map(ModificationInfos::getUuid).toList();
-        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(subModUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID compositeUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
         runRequestAsync(mockMvc,
                 put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}?action=INSERT", TEST_GROUP_ID)
-                        .content(getJsonBodyModificationCompositeInfos(List.of(Pair.of(compositeUuid, "composite"))))
+                        .content(getJsonBodyModificationCompositeToBeInserted(
+                                List.of(new CompositeInfos(compositeUuid, "composite", false, "description"))))
                         .contentType(MediaType.APPLICATION_JSON),
                 status().isOk());
 
@@ -457,13 +566,18 @@ class CompositeControllerTest {
         List<UUID> actualSubUuids = initialMap.get(compositeUuid).stream().map(ModificationInfos::getUuid).toList();
         assertEquals(2, actualSubUuids.size());
 
-        int rootSizeBefore = modificationRepository.getModifications(TEST_GROUP_ID, true, true).size();
+        int rootSizeBefore = networkModificationRepository.getModifications(TEST_GROUP_ID, true, true).size();
 
         // Move first sub-modification from composite to root level (no targetCompositeUuid)
-        UUID movingUuid = actualSubUuids.get(0);
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}/sub-modifications/{modificationUuid}",
-                        TEST_GROUP_ID, movingUuid)
-                        .queryParam("sourceCompositeUuid", compositeUuid.toString()))
+        UUID movingUuid = actualSubUuids.getFirst();
+        mockMvc.perform(put("/v1/containers/{targetContainerId}", TEST_GROUP_ID)
+                        .queryParam("action", ActionType.MOVE.name())
+                        .queryParam("sourceContainerId", compositeUuid.toString())
+                        .queryParam("sourceContainerType", ModificationContainerType.COMPOSITE.name())
+                        .queryParam("targetContainerType", ModificationContainerType.GROUP.name())
+                        .queryParam("build", "false")
+                        .content(mapper.writeValueAsString(Pair.of(List.of(movingUuid), List.of())))
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk());
 
         // Composite should now contain only 1 sub-modification
@@ -472,19 +586,19 @@ class CompositeControllerTest {
                         .andExpect(status().isOk()).andReturn().getResponse().getContentAsString(),
                 new TypeReference<>() { });
         assertEquals(1, resultMap.get(compositeUuid).size());
-        assertEquals(actualSubUuids.get(1), resultMap.get(compositeUuid).get(0).getUuid());
+        assertEquals(actualSubUuids.get(1), resultMap.get(compositeUuid).getFirst().getUuid());
 
         // Root group should have one more modification
-        assertEquals(rootSizeBefore + 1, modificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
+        assertEquals(rootSizeBefore + 1, networkModificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
 
         // The moved modification must now belong to TEST_GROUP_ID (has a group at root level)
-        ModificationEntity movedEntity = modificationRepository.getModificationEntity(movingUuid);
-        assertNotNull(movedEntity.getGroup());
-        assertEquals(TEST_GROUP_ID, movedEntity.getGroup().getId());
+        ModificationEntity movedEntity = networkModificationRepository.getModificationEntity(movingUuid);
+        assertNotNull(movedEntity.getContainerUuid());
+        assertEquals(TEST_GROUP_ID, movedEntity.getContainerUuid());
 
         // The remaining sub-modification must still have no group (still owned by the composite)
-        ModificationEntity remainingEntity = modificationRepository.getModificationEntity(actualSubUuids.get(1));
-        assertNull(remainingEntity.getGroup());
+        ModificationEntity remainingEntity = networkModificationRepository.getModificationEntity(actualSubUuids.get(1));
+        assertEquals(remainingEntity.getContainerUuid(), compositeUuid);
     }
 
     @Test
@@ -493,7 +607,7 @@ class CompositeControllerTest {
         List<ModificationInfos> rootMods = createSomeSwitchModifications(TEST_GROUP_ID, 3);
         final List<UUID> originalRootModUuids = rootMods.stream().map(ModificationInfos::getUuid).toList();
 
-        assertEquals(3, modificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
+        assertEquals(3, networkModificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
 
         // ---- 1. Assemble the first 2 root-level modifications into a new composite
         List<UUID> assembledModificationUuids = originalRootModUuids.subList(0, 2);
@@ -506,7 +620,7 @@ class CompositeControllerTest {
         assertNotNull(firstCompositeUuid);
 
         // The root group should now contain the new composite and the remaining non-assembled modification
-        List<ModificationInfos> rootModificationsAfterAssemble = modificationRepository.getModifications(TEST_GROUP_ID, true, true);
+        List<ModificationInfos> rootModificationsAfterAssemble = networkModificationRepository.getModifications(TEST_GROUP_ID, true, true);
         assertEquals(2, rootModificationsAfterAssemble.size());
         assertEquals(firstCompositeUuid, rootModificationsAfterAssemble.getFirst().getUuid());
         assertEquals(COMPOSITE_MODIFICATION, rootModificationsAfterAssemble.getFirst().getType());
@@ -525,19 +639,23 @@ class CompositeControllerTest {
 
         // The new composite must belong to TEST_GROUP_ID at root level
         CompositeModificationEntity firstComposite = compositeRepository.findById(firstCompositeUuid).orElseThrow();
-        assertNotNull(firstComposite.getGroup());
-        assertEquals(TEST_GROUP_ID, firstComposite.getGroup().getId());
+        assertNotNull(firstComposite.getContainerUuid());
+        assertEquals(ModificationContainerType.GROUP, networkModificationRepository.getContainerType(firstComposite));
+        assertEquals(TEST_GROUP_ID, firstComposite.getContainerUuid());
 
         // The assembled modifications must no longer belong directly to the group
-        ModificationEntity firstAssembledEntity = modificationRepository.getModificationEntity(originalRootModUuids.get(0));
-        ModificationEntity secondAssembledEntity = modificationRepository.getModificationEntity(originalRootModUuids.get(1));
-        assertNull(firstAssembledEntity.getGroup());
-        assertNull(secondAssembledEntity.getGroup());
+        ModificationEntity firstAssembledEntity = networkModificationRepository.getModificationEntity(originalRootModUuids.get(0));
+        ModificationEntity secondAssembledEntity = networkModificationRepository.getModificationEntity(originalRootModUuids.get(1));
+        assertEquals(ModificationContainerType.COMPOSITE, networkModificationRepository.getContainerType(firstAssembledEntity));
+        assertEquals(ModificationContainerType.COMPOSITE, networkModificationRepository.getContainerType(secondAssembledEntity));
 
         // The non-assembled modification must still belong to TEST_GROUP_ID
-        ModificationEntity remainingInGroupEntity = modificationRepository.getModificationEntity(originalRootModUuids.get(2));
-        assertNotNull(remainingInGroupEntity.getGroup());
-        assertEquals(TEST_GROUP_ID, remainingInGroupEntity.getGroup().getId());
+        ModificationEntity remainingInGroupEntity = networkModificationRepository.getModificationEntity(originalRootModUuids.get(2));
+        assertNotNull(remainingInGroupEntity.getContainerUuid());
+        assertEquals(ModificationContainerType.GROUP, networkModificationRepository.getContainerType(remainingInGroupEntity));
+        assertEquals(TEST_GROUP_ID, remainingInGroupEntity.getContainerUuid());
+        assertContiguousOrder(modificationRepository.findAllByContainerId(TEST_GROUP_ID, false));
+        assertContiguousOrder(modificationRepository.findAllByContainer(firstCompositeUuid));
 
         // ---- 2. now assembles a modification which is inside a composite with something that is outside :
         assembledModificationUuids = List.of(compositeContent.getFirst().getUuid(), remainingInGroupEntity.getId());
@@ -551,7 +669,7 @@ class CompositeControllerTest {
         assertNotNull(twodepthCompositeUuid);
 
         // The root group should now contain the new composite and nothing else
-        rootModificationsAfterAssemble = modificationRepository.getModifications(TEST_GROUP_ID, true, true);
+        rootModificationsAfterAssemble = networkModificationRepository.getModifications(TEST_GROUP_ID, true, true);
         assertEquals(1, rootModificationsAfterAssemble.size());
 
         // The first composite should contain the new composite, then the other untouched modification
@@ -567,7 +685,7 @@ class CompositeControllerTest {
 
         // The new 2 depth composite must now belong to the first composite, not to a group
         CompositeModificationEntity twoDepthComposite = compositeRepository.findById(twodepthCompositeUuid).orElseThrow();
-        assertNull(twoDepthComposite.getGroup());
+        assertEquals(ModificationContainerType.COMPOSITE, networkModificationRepository.getContainerType(twoDepthComposite));
         compositeContentMap = mapper.readValue(
                 mockMvc.perform(get(URI_GET_COMPOSITE_NETWORK_MODIF_CONTENT + "/network-modifications?uuids={id}", firstCompositeUuid))
                         .andExpect(status().isOk()).andReturn().getResponse().getContentAsString(),
@@ -575,6 +693,10 @@ class CompositeControllerTest {
         assertTrue(compositeContentMap.get(firstCompositeUuid).stream()
                 .map(ModificationInfos::getUuid)
                 .anyMatch(twodepthCompositeUuid::equals));
+
+        assertContiguousOrder(modificationRepository.findAllByContainerId(TEST_GROUP_ID, false));
+        assertContiguousOrder(modificationRepository.findAllByContainer(firstCompositeUuid));
+        assertContiguousOrder(modificationRepository.findAllByContainer(twodepthCompositeUuid));
     }
 
     @Test
@@ -582,7 +704,7 @@ class CompositeControllerTest {
         // Build nested structure: outerComposite → [innerComposite → [leaf1, leaf2], leaf3]
         List<ModificationInfos> innerLeafs = createSomeSwitchModifications(TEST_GROUP_ID, 2);
         List<UUID> innerLeafUuids = innerLeafs.stream().map(ModificationInfos::getUuid).toList();
-        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(innerLeafUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID innerCompositeUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
@@ -596,9 +718,9 @@ class CompositeControllerTest {
         assertEquals(2, actualInnerSubUuids.size());
 
         List<ModificationInfos> outerLeafs = createSomeSwitchModifications(TEST_GROUP2_ID, 1);
-        UUID leaf3RootUuid = outerLeafs.get(0).getUuid();
+        UUID leaf3RootUuid = outerLeafs.getFirst().getUuid();
 
-        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(List.of(innerCompositeUuid, leaf3RootUuid))).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID outerCompositeUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
@@ -650,14 +772,14 @@ class CompositeControllerTest {
 
         List<ModificationInfos> subMods = createSomeSwitchModifications(TEST_GROUP2_ID, 1);
         List<UUID> subModUuids = subMods.stream().map(ModificationInfos::getUuid).toList();
-        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(subModUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID compositeUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
         runRequestAsync(mockMvc,
                 put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}?action=INSERT", TEST_GROUP_ID)
-                        .content(getJsonBodyModificationCompositeInfos(List.of(Pair.of(compositeUuid, "composite"))))
+                        .content(getJsonBodyModificationCompositeToBeInserted(List.of(new CompositeInfos(compositeUuid, "composite", false, "description"))))
                         .contentType(MediaType.APPLICATION_JSON),
                 status().isOk());
 
@@ -669,12 +791,16 @@ class CompositeControllerTest {
         List<UUID> actualSubUuids = initialMap.get(compositeUuid).stream().map(ModificationInfos::getUuid).toList();
         assertEquals(1, actualSubUuids.size());
 
-        int rootSizeBefore = modificationRepository.getModifications(TEST_GROUP_ID, true, true).size();
+        int rootSizeBefore = networkModificationRepository.getModifications(TEST_GROUP_ID, true, true).size();
 
-        // Move root-level modification into the composite (no sourceCompositeUuid), append at end
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}/sub-modifications/{modificationUuid}",
-                        TEST_GROUP_ID, rootModUuid)
-                        .queryParam("targetCompositeUuid", compositeUuid.toString()))
+        // Move root-level modification into the composite (origin = root group), append at end
+        mockMvc.perform(put("/v1/containers/{targetContainerId}", compositeUuid)
+                        .queryParam("action", ActionType.MOVE.name())
+                        .queryParam("sourceContainerId", TEST_GROUP_ID.toString())
+                        .queryParam("sourceContainerType", ModificationContainerType.GROUP.name())
+                        .queryParam("targetContainerType", ModificationContainerType.COMPOSITE.name())
+                        .content(mapper.writeValueAsString(Pair.of(List.of(rootModUuid), List.of())))
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk());
 
         // Composite should now contain 2 sub-modifications; moved mod is appended at the end
@@ -688,11 +814,11 @@ class CompositeControllerTest {
         assertEquals(rootModUuid, newSubUuids.get(1));
 
         // Root group should have one less modification
-        assertEquals(rootSizeBefore - 1, modificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
+        assertEquals(rootSizeBefore - 1, networkModificationRepository.getModifications(TEST_GROUP_ID, true, true).size());
 
         // The moved modification must now have no group (owned by the composite, not the group)
-        ModificationEntity movedEntity = modificationRepository.getModificationEntity(rootModUuid);
-        assertNull(movedEntity.getGroup());
+        ModificationEntity movedEntity = networkModificationRepository.getModificationEntity(rootModUuid);
+        assertEquals(movedEntity.getContainerUuid(), compositeUuid);
     }
 
     @Test
@@ -704,25 +830,25 @@ class CompositeControllerTest {
         UUID leaf2Uuid = leafMods.get(1).getUuid();
         UUID leaf3Uuid = leafMods.get(2).getUuid();
 
-        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(List.of(leaf1Uuid))).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID composite3Uuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
-        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 2")
                         .content(mapper.writeValueAsString(List.of(composite3Uuid, leaf2Uuid))).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID composite2Uuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
-        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 3")
                         .content(mapper.writeValueAsString(List.of(composite2Uuid, leaf3Uuid))).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID composite1Uuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
         List<ModificationInfos> extraLeafs = createSomeSwitchModifications(TEST_GROUP2_ID, 1);
-        UUID leaf4Uuid = extraLeafs.get(0).getUuid();
+        UUID leaf4Uuid = extraLeafs.getFirst().getUuid();
 
-        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 4")
                         .content(mapper.writeValueAsString(List.of(composite1Uuid, leaf4Uuid))).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID composite0Uuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
@@ -749,25 +875,34 @@ class CompositeControllerTest {
                 .filter(m -> COMPOSITE_MODIFICATION == m.getType()).map(ModificationInfos::getUuid).findFirst().orElseThrow();
 
         // Case 1: direct child — move composite1 into composite2 (direct child of composite1)
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}/sub-modifications/{modificationUuid}",
-                        TEST_GROUP_ID, actualComposite1Uuid)
-                        .queryParam("sourceCompositeUuid", composite0Uuid.toString())
-                        .queryParam("targetCompositeUuid", actualComposite2Uuid.toString()))
-                .andExpect(status().is5xxServerError());
+        mockMvc.perform(put("/v1/containers/{targetContainerId}", actualComposite2Uuid)
+                        .queryParam("action", ActionType.MOVE.name())
+                        .queryParam("sourceContainerId", composite0Uuid.toString())
+                        .queryParam("sourceContainerType", ModificationContainerType.COMPOSITE.name())
+                        .queryParam("targetContainerType", ModificationContainerType.COMPOSITE.name())
+                        .content(mapper.writeValueAsString(Pair.of(List.of(actualComposite1Uuid), List.of())))
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isBadRequest());
 
         // Case 2: recursive — move composite1 into composite3 (grandchild of composite1)
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}/sub-modifications/{modificationUuid}",
-                        TEST_GROUP_ID, actualComposite1Uuid)
-                        .queryParam("sourceCompositeUuid", composite0Uuid.toString())
-                        .queryParam("targetCompositeUuid", actualComposite3Uuid.toString()))
-                .andExpect(status().is5xxServerError());
+        mockMvc.perform(put("/v1/containers/{targetContainerId}", actualComposite3Uuid)
+                        .queryParam("action", ActionType.MOVE.name())
+                        .queryParam("sourceContainerId", composite0Uuid.toString())
+                        .queryParam("sourceContainerType", ModificationContainerType.COMPOSITE.name())
+                        .queryParam("targetContainerType", ModificationContainerType.COMPOSITE.name())
+                        .content(mapper.writeValueAsString(Pair.of(List.of(actualComposite1Uuid), List.of())))
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isBadRequest());
 
         // Case 3: self — move composite1 into itself
-        mockMvc.perform(put(URI_COMPOSITE_NETWORK_MODIF_BASE + "/groups/{groupUuid}/sub-modifications/{modificationUuid}",
-                        TEST_GROUP_ID, actualComposite1Uuid)
-                        .queryParam("sourceCompositeUuid", composite0Uuid.toString())
-                        .queryParam("targetCompositeUuid", actualComposite1Uuid.toString()))
-                .andExpect(status().is5xxServerError());
+        mockMvc.perform(put("/v1/containers/{targetContainerId}", actualComposite1Uuid)
+                        .queryParam("action", ActionType.MOVE.name())
+                        .queryParam("sourceContainerId", composite0Uuid.toString())
+                        .queryParam("sourceContainerType", ModificationContainerType.COMPOSITE.name())
+                        .queryParam("targetContainerType", ModificationContainerType.COMPOSITE.name())
+                        .content(mapper.writeValueAsString(Pair.of(List.of(actualComposite1Uuid), List.of())))
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isBadRequest());
     }
 
     @Test
@@ -775,24 +910,34 @@ class CompositeControllerTest {
         // Create a composite modification
         List<ModificationInfos> modificationList = createSomeSwitchModifications(TEST_GROUP_ID, 2);
         List<UUID> modificationUuids = modificationList.stream().map(ModificationInfos::getUuid).toList();
-        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        MvcResult mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(modificationUuids)).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID compositeUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
         // Create a new composite from that single composite — must not wrap
-        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE)
+        mvcResult = mockMvc.perform(post(URI_COMPOSITE_NETWORK_MODIF_BASE).queryParam("name", "composite name 1")
                         .content(mapper.writeValueAsString(List.of(compositeUuid))).contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk()).andReturn();
         UUID resultUuid = mapper.readValue(mvcResult.getResponse().getContentAsString(), new TypeReference<>() { });
 
         // The result must be a composite (not wrapped in another composite)
-        ModificationInfos resultInfos = modificationRepository.getModificationInfo(resultUuid);
+        ModificationInfos resultInfos = networkModificationRepository.getModificationInfo(resultUuid);
         assertInstanceOf(CompositeModificationInfos.class, resultInfos);
 
         // Its direct children must be the 2 leaf modifications, not another composite layer
         List<ModificationInfos> children = ((CompositeModificationInfos) resultInfos).getModificationsInfos();
         assertEquals(2, children.size());
         children.forEach(child -> assertFalse(child instanceof CompositeModificationInfos));
+    }
+
+    private static void assertContiguousOrder(List<ModificationEntity> modifications) {
+        List<ModificationEntity> sorted = modifications.stream()
+                .sorted(Comparator.comparingInt(ModificationEntity::getModificationsOrder))
+                .toList();
+        for (int i = 0; i < sorted.size(); i++) {
+            assertEquals(i, sorted.get(i).getModificationsOrder(),
+                    "gap or duplicate at index " + i + " for modification " + sorted.get(i).getId());
+        }
     }
 }
